--- a/gui/src-android/app/src/main/AndroidManifest.xml
+++ b/gui/src-android/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
 				android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/Theme.ztm"
+        android:theme="@style/Theme.ztapp"
         android:extractNativeLibs = "true"
 				android:supportsRtl="true"
         android:usesCleartextTraffic="${usesCleartextTraffic}">
