--- a/gui/src-tauri/Cargo.toml
+++ b/gui/src-tauri/Cargo.toml
@@ -1,14 +1,14 @@
 [package]
-name = "ztm"
+name = "ztapp"
 version = "0.0.4"
-description = "ZTM"
+description = "ZTAPP"
 authors = ["lindc"]
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [lib]
-name = "ztm_lib"
+name = "ztapp_lib"
 crate-type = ["lib", "cdylib", "staticlib"]
 
 [build-dependencies]
