--- a/gui/src-tauri/Cargo.toml
+++ b/gui/src-tauri/Cargo.toml
@@ -17,7 +17,7 @@ tauri-build = { version = "2.0.0-beta", features = [] }
 # tauri = { version = "2.0.0-beta", features = ["devtools"] } 
 [dependencies]
 fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
-tauri = { version = "=2.0.0-beta.22", features = ["macos-proxy"] }
+tauri = { version = "=2.0.0-beta.22", features = ["macos-proxy", "unstable"] }
 tauri-utils = "=2.0.0-beta.17"
 tauri-plugin-shell = "=2.0.0-beta.5"
 serde = { version = "1", features = ["derive"] }
