--- a/gui/package.json
+++ b/gui/package.json
@@ -9,6 +9,7 @@
     "tauri": "tauri",
     "build": "vite build --emptyOutDir --outDir ../agent/gui",
     "build:base": "vite build --emptyOutDir --outDir ../agent/gui && tauri build",
+    "build:debug": "vite build --emptyOutDir --outDir ../agent/gui && tauri build --debug",
     "android-init": "tauri android init && cp -rf ./src-android/app ./src-tauri/gen/android",
     "android-dev": "cp -rf ./src-android/app ./src-tauri/gen/android && tauri android dev",
     "android-build": "vite build --emptyOutDir --outDir ../agent/gui && tauri android build",
