--- a/gui/src-android/app/src/main/AndroidManifest.xml
+++ b/gui/src-android/app/src/main/AndroidManifest.xml
@@ -35,8 +35,8 @@
 							<action android:name="android.intent.action.VIEW" />
 							<category android:name="android.intent.category.DEFAULT" />
 							<category android:name="android.intent.category.BROWSABLE" />
-							<data android:scheme="ipc"
-									android:host="www.flomesh.ztm" />
+							<data android:scheme="tauri"
+									android:host="localhost" android:pathPrefix="/webview" />
 						</intent-filter>
 				</activity>
         <service 
