--- a/gui/package.json
+++ b/gui/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "@tauri-apps/api": "2.0.0-beta.13",
+    "@tauri-apps/plugin-deep-link": "2.0.0-beta.6",
     "@tauri-apps/plugin-fs": "2.0.0-beta.5",
     "@tauri-apps/plugin-http": "2.0.0-beta.5",
     "@tauri-apps/plugin-os": "2.0.0-beta.5",
