--- a/gui/src-tauri/Cargo.toml
+++ b/gui/src-tauri/Cargo.toml
@@ -26,6 +26,7 @@ tauri-plugin-process = "=2.0.0-beta.5"
 tauri-plugin-http = "=2.0.0-beta.5"
 tauri-plugin-os = "=2.0.0-beta.5"
 tauri-plugin-fs = "=2.0.0-beta.7"
+tauri-plugin-deep-link = "=2.0.0-beta.6"
 libloading = "0.7"
 j4rs = "0.20.0"
 
