--- a/.github/workflows/windows-build-debug.yml
+++ b/.github/workflows/windows-build-debug.yml
@@ -4,7 +4,7 @@ on: workflow_dispatch
 
 jobs:
   build:
-    runs-on: windows-2019
+    runs-on: windows-latest
     steps:
     - uses: actions/checkout@v2
     - name: Add msbuild to PATH
