--- a/gui/package.json
+++ b/gui/package.json
@@ -33,7 +33,7 @@
     "@tauri-apps/plugin-fs": "2.0.0-beta.5",
     "@tauri-apps/plugin-http": "2.0.0-beta.5",
     "@tauri-apps/plugin-os": "2.0.0-beta.5",
-    "@tauri-apps/plugin-process": "2.0.0-beta.5",
+    "@tauri-apps/plugin-process": "^2.0.0-beta.5",
     "@tauri-apps/plugin-shell": "2.0.0-beta.5",
     "@vee-validate/rules": "4.12.7",
     "axios": "^0.21.1",
