--- a/gui/src-tauri/Cargo.toml
+++ b/gui/src-tauri/Cargo.toml
@@ -32,6 +32,7 @@ tauri-plugin-fs = "=2.0.0-beta.7"
 tauri-plugin-deep-link = "=2.0.0-beta.6"
 libloading = "0.7"
 j4rs = "0.20.0"
+wry = "0.41.0"
 
 [target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
 tauri-plugin-cli = "2.0.0-beta"
